--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@tailwindcss/vite": "^4.1.12",
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
